--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         </div>
                     </section>
 
-                    {/* Curation Video Section */}
+                    {/* Curation Video Section (Updated) */}
                     <section className="bg-white py-12 border-b">
                         <div className="container mx-auto px-4 text-center">
                             <div className="inline-flex items-center gap-2 mb-4 text-blue-600 font-semibold bg-blue-50 px-4 py-1 rounded-full text-sm">
@@ -256,10 +256,11 @@
                             >
                                 {!playVideo ? (
                                     <>
+                                        {/* User Requested Thumbnail */}
                                         <img 
-                                            src="https://images.unsplash.com/photo-1537996194471-e657df975ab4?q=80&w=1600&auto=format&fit=crop" 
-                                            alt="Phuket View" 
-                                            className="w-full h-full object-cover opacity-80 group-hover:opacity-60 transition-opacity duration-300"
+                                            src="https://tse1.mm.bing.net/th/id/OIP.UwkkX7hLpUEqhOPUNDME5wHaEJ?w=474&h=474&c=7&p=0" 
+                                            alt="Phuket Video Thumbnail" 
+                                            className="w-full h-full object-cover opacity-90 group-hover:opacity-75 transition-opacity duration-300"
                                         />
                                         <div className="absolute inset-0 flex flex-col items-center justify-center">
                                             <div className="w-16 h-16 bg-white/30 backdrop-blur-md rounded-full flex items-center justify-center mb-4 group-hover:scale-110 transition-transform duration-300">
@@ -270,14 +271,15 @@
                                             <p className="text-white font-bold text-lg drop-shadow-md">영상 재생하기</p>
                                         </div>
                                         <div className="absolute bottom-4 right-4 bg-black/50 text-white text-xs px-3 py-1 rounded backdrop-blur-md">
-                                           Source: Amazing Thailand
+                                           Source: YouTube
                                         </div>
                                     </>
                                 ) : (
+                                    /* Updated YouTube Video ID */
                                     <iframe 
                                         className="w-full h-full"
-                                        src="https://www.youtube.com/embed/S_7iW5jQ2o4?autoplay=1&rel=0" 
-                                        title="Amazing Thailand Official Video"
+                                        src="https://www.youtube.com/embed/w4hp6aZ_uzI?autoplay=1&rel=0" 
+                                        title="Phuket Travel Video"
                                         frameBorder="0" 
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                         allowFullScreen
@@ -285,7 +287,7 @@
                                 )}
                             </div>
                             <p className="mt-4 text-gray-500 text-sm">
-                                * 태국 관광청 공식 추천 영상입니다. 5분간의 짧은 여행으로 푸켓의 분위기를 먼저 느껴보세요.
+                                * 엄선된 영상을 통해 푸켓의 아름다움을 미리 만나보세요.
                             </p>
                         </div>
                     </section>
