--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
                             >
                                 {!playVideo ? (
                                     <>
-                                        {/* User Requested Thumbnail */}
+                                        {/* Updated High-Res Thumbnail */}
                                         <img 
-                                            src="https://tse1.mm.bing.net/th/id/OIP.UwkkX7hLpUEqhOPUNDME5wHaEJ?w=474&h=474&c=7&p=0" 
+                                            src="https://tse1.mm.bing.net/th/id/OIP.1_2gL77ss1GppRgAehQMCQHaE8?w=474&h=474&c=7&p=0" 
                                             alt="Phuket Video Thumbnail" 
                                             className="w-full h-full object-cover opacity-90 group-hover:opacity-75 transition-opacity duration-300"
                                         />
@@ -383,7 +383,7 @@
                         </div>
                     </section>
 
-                    {/* Special Activity Section (Selection) */}
+                    {/* Special Activity Section (Selection) - Updated Images */}
                     <section id="activities" className="bg-slate-900 text-white py-16">
                         <div className="container mx-auto px-4">
                             <div className="text-center mb-12">
@@ -393,7 +393,7 @@
                             
                             <div className="grid grid-cols-1 md:grid-cols-3 gap-6">
                                 <div className="group relative overflow-hidden rounded-2xl h-80 cursor-pointer">
-                                    <img src="https://images.unsplash.com/photo-1596423736528-910aaf9559c5?q=80&w=800&auto=format&fit=crop" className="absolute inset-0 w-full h-full object-cover transition duration-500 group-hover:scale-110" alt="Culture" />
+                                    <img src="https://tse3.mm.bing.net/th/id/OIP.V-Sm7532zycCA7WrW2yJSAHaEH?w=474&h=474&c=7&p=0" className="absolute inset-0 w-full h-full object-cover transition duration-500 group-hover:scale-110" alt="Culture" />
                                     <div className="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent flex flex-col justify-end p-6">
                                         <span className="bg-orange-500 w-fit text-xs font-bold px-2 py-1 rounded mb-2">Option 1</span>
                                         <h3 className="text-xl font-bold mb-1">문화 & 힐링</h3>
@@ -402,7 +402,7 @@
                                 </div>
 
                                 <div className="group relative overflow-hidden rounded-2xl h-80 cursor-pointer">
-                                    <img src="https://images.unsplash.com/photo-1540202404-a671baf3933c?q=80&w=800&auto=format&fit=crop" className="absolute inset-0 w-full h-full object-cover transition duration-500 group-hover:scale-110" alt="Yacht" />
+                                    <img src="https://tse2.mm.bing.net/th/id/OIP.xkRNFYxuGQx8BqRlz80U2QHaEo?w=474&h=474&c=7&p=0" className="absolute inset-0 w-full h-full object-cover transition duration-500 group-hover:scale-110" alt="Yacht" />
                                     <div className="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent flex flex-col justify-end p-6">
                                         <span className="bg-blue-500 w-fit text-xs font-bold px-2 py-1 rounded mb-2">Option 2</span>
                                         <h3 className="text-xl font-bold mb-1">로맨틱 션셋</h3>
@@ -411,7 +411,7 @@
                                 </div>
 
                                 <div className="group relative overflow-hidden rounded-2xl h-80 cursor-pointer">
-                                    <img src="https://images.unsplash.com/photo-1598460620138-b7c4d5162a79?q=80&w=800&auto=format&fit=crop" className="absolute inset-0 w-full h-full object-cover transition duration-500 group-hover:scale-110" alt="Zipline" />
+                                    <img src="https://tse4.mm.bing.net/th/id/OIP.ZF8JY6Jo3N9lClfHbwv1QQHaE8?w=474&h=474&c=7&p=0" className="absolute inset-0 w-full h-full object-cover transition duration-500 group-hover:scale-110" alt="Zipline" />
                                     <div className="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent flex flex-col justify-end p-6">
                                         <span className="bg-green-500 w-fit text-xs font-bold px-2 py-1 rounded mb-2">Option 3</span>
                                         <h3 className="text-xl font-bold mb-1">다이나믹 액티비티</h3>
@@ -419,6 +419,11 @@
                                     </div>
                                 </div>
                             </div>
+                            
+                            {/* Disclaimer Text */}
+                            <p className="text-center text-gray-500 text-xs mt-8">
+                                * 상기 이미지는 이해를 돕기 위한 연출된 컷으로, 실제 현장 및 제공 서비스와 다를 수 있습니다.
+                            </p>
                         </div>
                     </section>
 
